...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="😹" />

            <com.google.developers.mojimaster2.game.AnswersView
                android:id="@+id/ans_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

...
